--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,22 @@
 html {
   scroll-behavior: smooth; }
 
+.preload {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background: #202020;
+  z-index: 2000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: opacity 0.5s ease; }
+
+.preload-finish {
+  opacity: 0;
+  pointer-events: none; }
+
 body {
   margin: 0;
   padding: 0; }
