--- a/css/style.scss
+++ b/css/style.scss
@@ -116,12 +116,12 @@ body {
 
 .carousel-caption-3 h1 {
   color: $white !important;
-  text-align: right;
+  text-align: left;
 }
 
 .carousel-caption-3 h3 {
   color: $white !important;
-  text-align: right;
+  text-align: left;
 }
 
 .hero-button {
