--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 * {
   box-sizing: border-box;
-  font-family: "Montserrat", sans-serif; }
+  font-family: "Montserrat", sans-serif;
+}
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+}
 
 .preload {
   position: fixed;
@@ -15,205 +17,265 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: opacity 0.5s ease; }
+  transition: opacity 0.5s ease;
+}
 
 .preload-finish {
   opacity: 0;
-  pointer-events: none; }
+  pointer-events: none;
+}
 
 body {
   margin: 0;
-  padding: 0; }
+  padding: 0;
+}
 
 .wrapper {
   width: 90%;
-  margin: 0 auto; }
+  margin: 0 auto;
+}
 
 .business-contact {
   background-color: #0c0b0b;
-  color: #ffffff; }
-  .business-contact .contact-media span {
-    display: block; }
-  .business-contact .contact-media .icon {
-    color: #fbb709;
-    margin-right: 0.3em; }
+  color: #ffffff;
+}
+.business-contact .contact-media span {
+  display: block;
+}
+.business-contact .contact-media .icon {
+  color: #fbb709;
+  margin-right: 0.3em;
+}
 
 .main-navbar {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
   font-weight: normal;
-  transition: font-weight 1000ms; }
-  .main-navbar .nav-item {
-    padding-top: 1em;
-    padding-bottom: 1em; }
-    .main-navbar .nav-item .nav-link {
-      color: #b11f1f !important;
-      font-weight: 500;
-      transition: color 2s;
-      font-size: 0.8rem; }
-    .main-navbar .nav-item:hover .nav-link {
-      font-weight: 600; }
-  .main-navbar .active {
-    background-color: #f6efef; }
-    .main-navbar .active .nav-link {
-      color: #b11f1f !important;
-      font-weight: 600; }
+  transition: font-weight 1000ms;
+}
+.main-navbar .nav-item {
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+.main-navbar .nav-item .nav-link {
+  color: #b11f1f !important;
+  font-weight: 500;
+  transition: color 2s;
+  font-size: 0.8rem;
+}
+.main-navbar .nav-item:hover .nav-link {
+  font-weight: 600;
+}
+.main-navbar .active {
+  background-color: #f6efef;
+}
+.main-navbar .active .nav-link {
+  color: #b11f1f !important;
+  font-weight: 600;
+}
 
 .carousel-caption-1 h1 {
   color: #ff4800 !important;
-  text-align: left; }
+  text-align: left;
+}
 
 .carousel-caption-1 h3 {
   color: #4b1905 !important;
-  text-align: left; }
+  text-align: left;
+}
 
 .carousel-caption-2 h1 {
   color: #095729 !important;
   text-align: left;
-  text-shadow: 1px 1px #ffffff; }
+  text-shadow: 1px 1px #ffffff;
+}
 
 .carousel-caption-2 h3 {
   color: #0ba14f !important;
   text-align: left;
-  text-shadow: 1px 1px #ccc; }
+  text-shadow: 1px 1px #ccc;
+}
 
 .carousel-caption-3 h1 {
   color: #ffffff !important;
-  text-align: right; }
+  text-align: left;
+}
 
 .carousel-caption-3 h3 {
   color: #ffffff !important;
-  text-align: right; }
+  text-align: left;
+}
 
 .hero-button {
   background-color: #c3951f !important;
-  border-radius: 0; }
-  .hero-button:hover {
-    background-color: #4e3b09 !important;
-    color: #ffffff !important; }
+  border-radius: 0;
+}
+.hero-button:hover {
+  background-color: #4e3b09 !important;
+  color: #ffffff !important;
+}
 
 .custom-page-link {
   color: #c3951f;
-  font-weight: 500; }
-  .custom-page-link:hover {
-    text-decoration: none;
-    color: #b11f1f; }
+  font-weight: 500;
+}
+.custom-page-link:hover {
+  text-decoration: none;
+  color: #b11f1f;
+}
 
 .card-title {
-  font-weight: 600; }
+  font-weight: 600;
+}
 
 .sector-client-portfolio-wrapper {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; }
-  .sector-client-portfolio-wrapper .column-1,
-  .sector-client-portfolio-wrapper .column-2 {
-    flex-basis: 47%; }
-  .sector-client-portfolio-wrapper .column-3 {
-    flex-basis: 70%; }
+  flex-wrap: wrap;
+}
+.sector-client-portfolio-wrapper .column-1,
+.sector-client-portfolio-wrapper .column-2 {
+  flex-basis: 47%;
+}
+.sector-client-portfolio-wrapper .column-3 {
+  flex-basis: 70%;
+}
 
 .contact-us-banner {
   background-color: #202020;
   color: #ffffff;
   padding: 2em 0 2em 0;
-  margin-bottom: 4em; }
+  margin-bottom: 4em;
+}
 
 .contact-us-btn {
   background-color: #c3951f;
   padding: 0.7em;
   width: 30%;
   color: #202020;
-  font-size: 1rem; }
+  font-size: 1rem;
+}
 
 .contact-us-btn:hover {
   background-color: #4e3b09;
   text-decoration: none;
-  color: #ffffff; }
+  color: #ffffff;
+}
 
 .contact-us-inner {
-  text-align: center; }
+  text-align: center;
+}
 
 .contact-us-inner h5 {
-  margin-bottom: 1em; }
+  margin-bottom: 1em;
+}
 
 .section-title {
-  text-align: center; }
+  text-align: center;
+}
 
 .who-we-are-section-1 {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; }
-  .who-we-are-section-1 div {
-    flex-basis: 48%; }
-  .who-we-are-section-1 .column-1 {
-    order: 1; }
-  .who-we-are-section-1 .column-2 {
-    order: 3;
-    flex-basis: 100%;
-    padding-top: 2em; }
-  .who-we-are-section-1 .column-3 {
-    order: 2; }
+  flex-wrap: wrap;
+}
+.who-we-are-section-1 div {
+  flex-basis: 48%;
+}
+.who-we-are-section-1 .column-1 {
+  order: 1;
+}
+.who-we-are-section-1 .column-2 {
+  order: 3;
+  flex-basis: 100%;
+  padding-top: 2em;
+}
+.who-we-are-section-1 .column-3 {
+  order: 2;
+}
 
 .company-efforts li {
   list-style-image: url(../images/dot-circle-regular.png);
-  padding: 0; }
-  .company-efforts li h5 {
-    font-weight: 600; }
+  padding: 0;
+}
+.company-efforts li h5 {
+  font-weight: 600;
+}
 
 .working-with-us {
-  background-color: #c0cbbc; }
-  .working-with-us h5,
-  .working-with-us li {
-    font-weight: 600; }
-  .working-with-us ul li {
-    list-style-image: url(../images/tick.png);
-    line-height: 1.9; }
+  background-color: #c0cbbc;
+}
+.working-with-us h5,
+.working-with-us li {
+  font-weight: 600;
+}
+.working-with-us ul li {
+  list-style-image: url(../images/tick.png);
+  line-height: 1.9;
+}
 
 .feedback-container p::before {
   content: open-quote;
   font-weight: 600;
-  font-size: 3em; }
+  font-size: 3em;
+}
 .feedback-container p::after {
   content: close-quote;
   font-weight: 600;
-  font-size: 0.7em; }
+  font-size: 0.7em;
+}
 .feedback-container h6 {
-  font-weight: 600; }
+  font-weight: 600;
+}
 
 footer {
   background-color: #202020;
-  color: #ffffff; }
-  footer .list-head {
-    font-weight: 600; }
-  footer ul {
-    padding: 0; }
-    footer ul li {
-      list-style: none;
-      font-size: 0.8rem;
-      margin-top: 0.7em; }
-    footer ul .list-head {
-      font-size: 0.9rem; }
-    footer ul .phone-number {
-      display: flex; }
-      footer ul .phone-number p {
-        margin: 0; }
-  footer a {
-    text-decoration: none;
-    color: #ffffff; }
-    footer a:hover, footer a:focus {
-      color: #fbb709; }
+  color: #ffffff;
+}
+footer .list-head {
+  font-weight: 600;
+}
+footer ul {
+  padding: 0;
+}
+footer ul li {
+  list-style: none;
+  font-size: 0.8rem;
+  margin-top: 0.7em;
+}
+footer ul .list-head {
+  font-size: 0.9rem;
+}
+footer ul .phone-number {
+  display: flex;
+}
+footer ul .phone-number p {
+  margin: 0;
+}
+footer a {
+  text-decoration: none;
+  color: #ffffff;
+}
+footer a:hover,
+footer a:focus {
+  color: #fbb709;
+}
 
 .modal-title {
-  color: #b11f1f; }
+  color: #b11f1f;
+}
 
 .contact-us-modal-form label {
-  color: #c3951f; }
+  color: #c3951f;
+}
 .contact-us-modal-form .form-control:focus {
   outline: none;
-  box-shadow: inset 0 -2px 0 #c3951f; }
+  box-shadow: inset 0 -2px 0 #c3951f;
+}
 .contact-us-modal-form .custom-control-input:checked ~ .custom-control-label::before {
   border-color: #c3951f !important;
-  background-color: #c3951f !important; }
+  background-color: #c3951f !important;
+}
 
 .componentYellowBackground {
   background-color: #c3951f;
@@ -230,9 +292,12 @@ footer {
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0.25rem;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out; }
-  .componentYellowBackground:not(:disabled):not(.disabled) {
-    cursor: pointer; }
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+    box-shadow 0.15s ease-in-out;
+}
+.componentYellowBackground:not(:disabled):not(.disabled) {
+  cursor: pointer;
+}
 
 .contact-us-form .form-control,
 .contact-us-form .custom-select,
@@ -244,183 +309,235 @@ footer {
   border-radius: 3px;
   padding: 3px;
   border: 1px solid #c3951f;
-  background-color: unset; }
-  .contact-us-form .form-control:focus,
-  .contact-us-form .custom-select:focus,
-  .contact-us-form input[type="text"]:focus,
-  .contact-us-form input[type="email"]:focus,
-  .contact-us-form textarea:focus {
-    border: 1px solid #b11f1f;
-    outline: 0;
-    box-shadow: none; }
+  background-color: unset;
+}
+.contact-us-form .form-control:focus,
+.contact-us-form .custom-select:focus,
+.contact-us-form input[type="text"]:focus,
+.contact-us-form input[type="email"]:focus,
+.contact-us-form textarea:focus {
+  border: 1px solid #b11f1f;
+  outline: 0;
+  box-shadow: none;
+}
 .contact-us-form .form-button:hover {
   background-color: #b11f1f !important;
-  transition: background-color 250ms; }
+  transition: background-color 250ms;
+}
 .contact-us-form .form-button:focus {
   border: 1px solid #fbb709;
   outline: 0;
-  box-shadow: none; }
+  box-shadow: none;
+}
 
 .form-button {
   background-color: #c3951f !important;
-  color: #ffffff !important; }
+  color: #ffffff !important;
+}
 
 footer .wrapper {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap; }
-  footer .wrapper .column-1 {
-    flex-basis: 100%; }
-  footer .wrapper .column-2,
-  footer .wrapper .column-3,
-  footer .wrapper .column-4 {
-    flex-basis: 50%; }
-    footer .wrapper .column-2 .phone-numbers,
-    footer .wrapper .column-3 .phone-numbers,
-    footer .wrapper .column-4 .phone-numbers {
-      display: flex;
-      justify-content: space-between;
-      width: 90%; }
+  flex-wrap: wrap;
+}
+footer .wrapper .column-1 {
+  flex-basis: 100%;
+}
+footer .wrapper .column-2,
+footer .wrapper .column-3,
+footer .wrapper .column-4 {
+  flex-basis: 50%;
+}
+footer .wrapper .column-2 .phone-numbers,
+footer .wrapper .column-3 .phone-numbers,
+footer .wrapper .column-4 .phone-numbers {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+}
 
 .footer-copyright {
   background-color: #000000;
   color: #ffffff;
-  display: flex; }
+  display: flex;
+}
 
 @media (max-width: 900px) {
   .sector-client-portfolio-wrapper {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; }
-    .sector-client-portfolio-wrapper .column-1,
-    .sector-client-portfolio-wrapper .column-2 {
-      flex-basis: 47%; }
-    .sector-client-portfolio-wrapper .column-3 {
-      flex-basis: 70%; } }
+    flex-wrap: wrap;
+  }
+  .sector-client-portfolio-wrapper .column-1,
+  .sector-client-portfolio-wrapper .column-2 {
+    flex-basis: 47%;
+  }
+  .sector-client-portfolio-wrapper .column-3 {
+    flex-basis: 70%;
+  }
+}
 @media (min-width: 950px) {
   .wrapper {
-    width: 80%; }
+    width: 80%;
+  }
 
   .contact-media {
     display: flex;
-    justify-content: space-around; }
-    .contact-media > span:after {
-      content: "|";
-      padding: 1em;
-      font-weight: bold;
-      color: #fbb709; }
+    justify-content: space-around;
+  }
+  .contact-media > span:after {
+    content: "|";
+    padding: 1em;
+    font-weight: bold;
+    color: #fbb709;
+  }
 
   .contact-us-inner {
     text-align: unset;
     display: flex;
     justify-content: space-between;
-    align-items: center; }
+    align-items: center;
+  }
 
   .contact-us-btn {
     text-align: center;
-    width: 20%; }
+    width: 20%;
+  }
 
   .company-efforts {
     display: flex;
-    justify-content: space-between; }
-    .company-efforts .best-product {
-      flex-basis: 30%; }
-    .company-efforts .proper-quality {
-      flex-basis: 30%; }
-    .company-efforts .high-conversion {
-      flex-basis: 30%; }
-    .company-efforts .content {
-      width: 100%; }
+    justify-content: space-between;
+  }
+  .company-efforts .best-product {
+    flex-basis: 30%;
+  }
+  .company-efforts .proper-quality {
+    flex-basis: 30%;
+  }
+  .company-efforts .high-conversion {
+    flex-basis: 30%;
+  }
+  .company-efforts .content {
+    width: 100%;
+  }
 
   .sector-client-portfolio-wrapper {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; }
-    .sector-client-portfolio-wrapper .column-1,
-    .sector-client-portfolio-wrapper .column-2,
-    .sector-client-portfolio-wrapper .column-3 {
-      flex-basis: 32%; }
+    flex-wrap: wrap;
+  }
+  .sector-client-portfolio-wrapper .column-1,
+  .sector-client-portfolio-wrapper .column-2,
+  .sector-client-portfolio-wrapper .column-3 {
+    flex-basis: 32%;
+  }
 
   .who-we-are-section-1 {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap; }
-    .who-we-are-section-1 .column-1 {
-      order: 1;
-      flex-basis: 30%; }
-    .who-we-are-section-1 .column-2 {
-      order: 2;
-      flex-basis: 30%;
-      padding-top: 0; }
-    .who-we-are-section-1 .column-3 {
-      order: 3;
-      flex-basis: 30%; }
+    flex-wrap: wrap;
+  }
+  .who-we-are-section-1 .column-1 {
+    order: 1;
+    flex-basis: 30%;
+  }
+  .who-we-are-section-1 .column-2 {
+    order: 2;
+    flex-basis: 30%;
+    padding-top: 0;
+  }
+  .who-we-are-section-1 .column-3 {
+    order: 3;
+    flex-basis: 30%;
+  }
 
   .working-with-us .video-container {
     height: 100%;
     width: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end; }
-    .working-with-us .video-container iframe {
-      width: 80%;
-      height: 84%; }
+    justify-content: flex-end;
+  }
+  .working-with-us .video-container iframe {
+    width: 80%;
+    height: 84%;
+  }
 
   .project-list-container .projects-list,
   .blog-list-container .projects-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; }
-    .project-list-container .projects-list .column-1,
-    .blog-list-container .projects-list .column-1 {
-      flex-basis: 30%; }
-    .project-list-container .projects-list .column-2,
-    .blog-list-container .projects-list .column-2 {
-      flex-basis: 30%; }
-    .project-list-container .projects-list .column-3,
-    .blog-list-container .projects-list .column-3 {
-      flex-basis: 30%; }
+    justify-content: space-between;
+  }
+  .project-list-container .projects-list .column-1,
+  .blog-list-container .projects-list .column-1 {
+    flex-basis: 30%;
+  }
+  .project-list-container .projects-list .column-2,
+  .blog-list-container .projects-list .column-2 {
+    flex-basis: 30%;
+  }
+  .project-list-container .projects-list .column-3,
+  .blog-list-container .projects-list .column-3 {
+    flex-basis: 30%;
+  }
 
   .feedback-container {
     display: flex;
-    justify-content: space-between; }
-    .feedback-container .column-1 {
-      flex-basis: 30%; }
-    .feedback-container .column-2 {
-      flex-basis: 30%; }
-    .feedback-container .column-3 {
-      flex-basis: 30%; }
+    justify-content: space-between;
+  }
+  .feedback-container .column-1 {
+    flex-basis: 30%;
+  }
+  .feedback-container .column-2 {
+    flex-basis: 30%;
+  }
+  .feedback-container .column-3 {
+    flex-basis: 30%;
+  }
 
   footer .wrapper {
     display: flex;
-    justify-content: space-between; }
-    footer .wrapper .column-1 {
-      flex-basis: 30%; }
-    footer .wrapper .column-2,
-    footer .wrapper .column-3,
-    footer .wrapper .column-4 {
-      flex-basis: 22%; }
-      footer .wrapper .column-2 .phone-numbers,
-      footer .wrapper .column-3 .phone-numbers,
-      footer .wrapper .column-4 .phone-numbers {
-        display: flex; } }
+    justify-content: space-between;
+  }
+  footer .wrapper .column-1 {
+    flex-basis: 30%;
+  }
+  footer .wrapper .column-2,
+  footer .wrapper .column-3,
+  footer .wrapper .column-4 {
+    flex-basis: 22%;
+  }
+  footer .wrapper .column-2 .phone-numbers,
+  footer .wrapper .column-3 .phone-numbers,
+  footer .wrapper .column-4 .phone-numbers {
+    display: flex;
+  }
+}
 @media (min-width: 600px) {
   .project-list-container .projects-list,
   .blog-list-container .projects-list {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between; }
-    .project-list-container .projects-list .column-1,
-    .blog-list-container .projects-list .column-1 {
-      flex-basis: 30%; }
-    .project-list-container .projects-list .column-2,
-    .blog-list-container .projects-list .column-2 {
-      flex-basis: 30%; }
-    .project-list-container .projects-list .column-3,
-    .blog-list-container .projects-list .column-3 {
-      flex-basis: 30%; } }
+    justify-content: space-between;
+  }
+  .project-list-container .projects-list .column-1,
+  .blog-list-container .projects-list .column-1 {
+    flex-basis: 30%;
+  }
+  .project-list-container .projects-list .column-2,
+  .blog-list-container .projects-list .column-2 {
+    flex-basis: 30%;
+  }
+  .project-list-container .projects-list .column-3,
+  .blog-list-container .projects-list .column-3 {
+    flex-basis: 30%;
+  }
+}
 @media (max-width: 768px) {
   .sector-client-portfolio-wrapper .column-3 {
-    margin-top: 2em; } }
+    margin-top: 2em;
+  }
+}
 
 /*# sourceMappingURL=style.css.map */
