--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,8 @@
   font-family: "Montserrat", sans-serif; }
 
 html {
-  scroll-behavior: smooth; }
+  scroll-behavior: smooth;
+  overflow-x: hidden; }
 
 .preload {
   position: fixed;
